chore: update environment variables in .env.local and adjust Jenkinsfile for local repo path

--- a/.env.local
+++ b/.env.local
@@ -1,48 +1,48 @@
 # Gmail address used to log in via IMAP and read incoming OTP emails
-GMAIL_USER=mekinjemal999@gmail.com
+GMAIL_USER=
 
 # Gmail App Password (NOT your normal Gmail password)
 # Generated from Google Account → Security → App passwords
-GMAIL_APP_PASS=hgycdmwkyvxhqjez
+GMAIL_APP_PASS=
 
 # IMAP server host for Gmail
-IMAP_HOST=imap.gmail.com
+IMAP_HOST=
 
 # IMAP secure port (993 is standard for IMAPS)
-IMAP_PORT=993
+IMAP_PORT=
 
 # Enable TLS encryption for secure email communication
-IMAP_TLS=true
+IMAP_TLS=
 
 # Filter OTP emails by sender address
 # Must exactly match the "From" address in the OTP email
-GMAIL_SENDER_FILTER=Partnerhub@safaricom.et
+GMAIL_SENDER_FILTER=
 
 # Filter OTP emails by subject line
 # Partial matches are allowed by IMAP
-GMAIL_SUBJECT_FILTER=OTP Login (One Platform)
+GMAIL_SUBJECT_FILTER=
 
 # Allow self-signed or intercepted TLS certificates (useful in corporate networks)
 # Set to true in production for higher security
-GMAIL_IMAP_TLS_REJECT_UNAUTHORIZED=false
+GMAIL_IMAP_TLS_REJECT_UNAUTHORIZED=
 
 # Same TLS certificate validation setting (fallback for generic IMAP configs)
-IMAP_TLS_REJECT_UNAUTHORIZED=false
+IMAP_TLS_REJECT_UNAUTHORIZED=
 
 # Password used to log in to the application under test (NOT email password)
-LOGIN_PASSWORD=@Mekin0828
+LOGIN_PASSWORD=
 
 
 
 # Number of recent emails to scan if no unread OTP email is found
-OTP_LOOKBACK_COUNT=10
+OTP_LOOKBACK_COUNT=
 
 # Maximum age (in minutes) for OTP emails to be considered valid
 # Prevents using very old OTPs
-OTP_MAX_AGE_MINUTES=2
+OTP_MAX_AGE_MINUTES=
 
 
 #   slow down between hops
-ROUTE_PAUSE_MS=2000;
+ROUTE_PAUSE_MS=
 #   navigation timeout
-NAV_TIMEOUT_MS=20000;
+NAV_TIMEOUT_MS=
