--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - jenkins_home:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
+      - /home/mekin/Desktop/Projects/Safaricom/One_platform_automation:/var/jenkins_home/local_repo
     environment:
       JAVA_OPTS: "-Djenkins.install.runSetupWizard=false"
 
