--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
             }
             post {
                 always {
-                    allure includeProperties: false, jdk: '', results: [[path: 'allure-results']]
+                    allure properties: false, name: '', results: [[path: 'allure-results']]
                 }
             }
         }
