--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -45,10 +45,7 @@ pipeline {
                 expression { env.BRANCH_NAME == 'master' || env.GIT_BRANCH == 'origin/master' }
             }
             steps {
-                step([
-                    $class: 'AllureReportPublisher',
-                    results: [[path: 'allure-results']]
-                ])
+                sh 'npx allure generate ./allure-results -o ./allure-report --clean || true'
             }
         }
     }
@@ -56,7 +53,7 @@ pipeline {
     post {
         always {
             junit allowEmptyResults: true, testResults: 'test-results/junit.xml'
-            archiveArtifacts artifacts: 'allure-results/**', allowEmptyArchive: true
+            archiveArtifacts artifacts: 'allure-results/**,allure-report/**', allowEmptyArchive: true
         }
     }
 }
