--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,16 +1,10 @@
 pipeline {
-    // Use official Playwright Docker image (includes Node, npm, browsers)
-    agent {
-        docker {
-            image 'mcr.microsoft.com/playwright:v1.42.0-jammy'
-            args '--ipc=host'
-        }
-    }
+    agent any  // Runs on master node; no dedicated Docker agent needed
 
     parameters {
         string(
-            name: 'TEST_PATH', 
-            defaultValue: '', 
+            name: 'TEST_PATH',
+            defaultValue: '',
             description: 'Optional: test file or folder, e.g. tests/login.spec.ts'
         )
     }
@@ -18,6 +12,7 @@ pipeline {
     environment {
         NODE_ENV = 'ci'
         NPM_REGISTRY = 'http://10.3.174.163:9090'   // internal npm registry
+        PLAYWRIGHT_IMAGE = 'mcr.microsoft.com/playwright:v1.42.0-jammy'
     }
 
     triggers {
@@ -25,43 +20,44 @@ pipeline {
     }
 
     stages {
-        stage('Verify Node') {
+
+        stage('Verify Docker & Node') {
             steps {
                 sh '''
-                  echo "Node version:"
-                  node -v
-                  echo "NPM version:"
-                  npm -v
+                    echo "Checking Docker version..."
+                    docker --version || echo "Docker not installed"
+                    
+                    echo "Pulling Playwright Docker image..."
+                    docker pull $PLAYWRIGHT_IMAGE
+
+                    echo "Workspace path: $WORKSPACE"
                 '''
             }
         }
 
-        stage('Install Dependencies') {
+        stage('Install Dependencies & Run Tests') {
             when {
                 branch 'master'
             }
             steps {
                 sh '''
-                  echo "Installing dependencies from internal registry: $NPM_REGISTRY"
-                  npm ci --registry $NPM_REGISTRY
-                  npx playwright install --with-deps --registry $NPM_REGISTRY
-                '''
-            }
-        }
+                    mkdir -p allure-results test-results
 
-        stage('Run Playwright Tests') {
-            when {
-                branch 'master'
-            }
-            steps {
-                sh '''
-                  mkdir -p allure-results test-results
-
-                  if [ -n "$TEST_PATH" ]; then
-                      npx playwright test "$TEST_PATH" --registry $NPM_REGISTRY
-                  else
-                      npx playwright test --registry $NPM_REGISTRY
-                  fi
+                    # Run inside Playwright Docker container
+                    docker run --rm \
+                        -v $WORKSPACE:$WORKSPACE \
+                        -w $WORKSPACE \
+                        --ipc=host \
+                        $PLAYWRIGHT_IMAGE /bin/bash -c "
+                            echo Installing dependencies from internal registry: $NPM_REGISTRY &&
+                            npm ci --registry $NPM_REGISTRY &&
+                            npx playwright install --with-deps --registry $NPM_REGISTRY &&
+                            if [ -n '$TEST_PATH' ]; then
+                                npx playwright test $TEST_PATH --reporter=list,junit --output=test-results
+                            else
+                                npx playwright test --reporter=list,junit --output=test-results
+                            fi
+                        "
                 '''
             }
         }
@@ -72,7 +68,7 @@ pipeline {
             }
             steps {
                 sh '''
-                  npx allure generate ./allure-results -o ./allure-report --clean || true
+                    npx allure generate ./allure-results -o ./allure-report --clean || true
                 '''
             }
         }
